cabal-version:      3.4
name:               advent
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gustavo Bicalho
maintainer:         gusbicalho@gmail.com

executable advent-exe
    main-is:          Main.hs
    build-depends:    base, advent
    hs-source-dirs:   app
    default-language: Haskell2010

library
  hs-source-dirs:
    src
  build-depends:
      base
    , clock
    , containers
    , fused-effects
    , transformers
    , text
    , generic-data
  exposed-modules:
      Advent2021.Day01
  other-modules:
      Paths_advent
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wno-name-shadowing
                      -foptimal-applicative-do
                      -fhide-source-paths
                      -Wpartial-fields
                      -Wmissing-deriving-strategies
                      -fwrite-ide-info
                      -hiedir=.hie
                      -Wunused-packages
  default-extensions: ApplicativeDo
                      BangPatterns
                      BinaryLiterals
                      ConstrainedClassMethods
                      ConstraintKinds
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveLift
                      DeriveTraversable
                      DerivingStrategies
                      DoAndIfThenElse
                      EmptyCase
                      EmptyDataDecls
                      EmptyDataDeriving
                      ExistentialQuantification
                      ExplicitForAll
                      FlexibleContexts
                      FlexibleInstances
                      ForeignFunctionInterface
                      FunctionalDependencies
                      GADTs
                      GADTSyntax
                      GeneralisedNewtypeDeriving
                      HexFloatLiterals
                      ImplicitPrelude
                      ImportQualifiedPost
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      MonomorphismRestriction
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      NamedWildCards
                      NoStarIsType
                      NumericUnderscores
                      OverloadedLabels
                      OverloadedStrings
                      PatternGuards
                      PatternSynonyms
                      PolyKinds
                      PostfixOperators
                      RankNTypes
                      RelaxedPolyRec
                      ScopedTypeVariables
                      StandaloneDeriving
                      StandaloneKindSignatures
                      StarIsType
                      TraditionalRecordSyntax
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeFamilyDependencies
                      TypeOperators
                      TypeSynonymInstances
                      ViewPatterns
